fix(java): standardize structure across 00-08 modules
- Unified folder structure: README.md, decision.md, quiz.md, references.md, 00-internals/, 01-memory/, examples/, practices/, solutions/
- Added missing root-level files (pom.xml, decision.md, references.md, .gitignore) to all 9 folders
- Fixed 01-fundamentals: renamed 08-maven→09-maven, added quiz/internals/memory to all topics
- Fixed 00-knowledge-atoms: renamed exercises→practices, added main quiz, internals, memory
- Fixed 02-oop: replaced duplicate quiz questions, filled gap numbering content
- Fixed 03-exceptions: added pom.xml, created sub-folder READMEs
- Fixed 04-collections: renamed 14-quiz.md→quiz.md, standardized internal folder naming
- Fixed 05-text-processing: removed empty placeholder dirs, added exercises
- Fixed 06-generics: filled empty README-part3.md, standardized internal numbering
- Fixed 07-functional-programming: removed empty placeholder dirs
- Fixed 08-io-nio: removed empty placeholder dirs, completed http3-networking topic
- Added .gitignore to all 9 folders
- Filled placeholder text in exercise READMEs (11-14)
- Upgraded 20 stub Practices.java files to real exercises